# rag-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt  schemas.py  stt.py
config/: logging_utils.py  settings.py
llm_provider/: base_provider.py  factory.py  gemini_provider.py  ollama_provider.py
services/: __init__.py  arxiv.py  file_upload.py  ingest.py  rag.py  storage_service.py
