[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-qdrant>=0.1.3",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.7.0",
    "pypdf>=4.0.0",
    "python-dotenv>=0.21.0",
    "qdrant-client>=1.16.2",
    "arxiv>=2.4.0",
]
